# alpen-ssz

./: .gitignore  README.md  biome.jsonc  index.html  package-lock.json  package.json  schema-sources.local.toml.example  schema-sources.toml  simpleserialize.Dockerfile  tsconfig.json  vite.config.ts
.github/workflows/: cd-manual.yml  checks.yml  publish.yml
docs/superpowers/plans/: 2026-03-18-complete-overhaul.md
docs/superpowers/specs/: 2026-03-18-complete-overhaul-design.md
src/: app.tsx  index.css  main.tsx
src/components/: Header.tsx  Input.tsx  error-boundary.tsx  footer.tsx  format-tabs.tsx  header.tsx  input-panel.tsx  output-panel.tsx  sources-menu.tsx  toolbar.tsx
src/components/builder/: field-input.tsx  type-builder.tsx
src/components/structure-view/: structure-view.tsx  tree-node.tsx  utils.ts
src/components/ui/: copy-button.tsx  file-upload.tsx
src/hooks/: use-debounce.ts  use-source-toggles.ts  use-ssz.ts  use-worker.ts
src/lib/: formats.ts  strata-codec.ts  types.ts  yaml.ts
src/util/: types.ts
src/workers/: ssz-worker.ts
tools/: smoke-test.mjs
tools/ssz-to-ts/: Cargo.toml
tools/ssz-to-ts/src/: config.rs  emit.rs  external_stubs.rs  main.rs  walker.rs
