[package]
name = "ssz-to-ts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ssz-to-ts"
path = "src/main.rs"

[dependencies]
sizzle-parser = { path = "../../../ssz-gen/crates/sizzle-parser" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
anyhow = "1"
